--- a/css/popup.css
+++ b/css/popup.css
@@ -4,9 +4,18 @@
     font-weight: 100;
     src: local('Raleway Thin'), local('Raleway-Thin'), url(http://themes.googleusercontent.com/static/fonts/raleway/v7/RJMlAoFXXQEzZoMSUteGWLO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
 }
+@font-face {
+    font-family: Gotham-Medium;
+    src: url("../resources/Gotham/GothamHTF-Medium.otf") format("opentype");
+}
+@font-face {
+    font-family: Gotham-Thin;
+    src: url("../resources/Gotham/GothamHTF-Thin.otf") format("opentype");
+}
 
 body{
-    font-family: 'Raleway';
+    font-family: 'Gotham-Medium', sans-serif;
+    /*font-family: 'Raleway';*/
 }
 .popup-left{
     width: 50%;
@@ -14,8 +23,12 @@ body{
     text-align: center;
 }
 .popup-right{
+    font-family: 'Gotham-Medium', sans-serif;
     width: 50%;
     float: left;
+}
+.desc{
+    font-family: 'Gotham-Thin', sans-serif;
 }
 .popup-container{
 
